@@ -62,6 +62,7 @@ V3_1_0 = 'v3.1.0'
 V3_2_0 = 'v3.2.0'
 V3_3_0 = 'v3.3.0'
 V3_3_1 = 'v3.3.1'
+V3_3_2 = 'V3.3.2'
 
 # Symmetry dict
 CS_SYM_NAME = dict()
