@@ -54,7 +54,7 @@ class ProtCryoSparcHelicalRefine3D(ProtCryoSparcRefine3D):
     _label = '3D helical refinement'
     _devStatus = BETA
     _fscColumns = 4
-    _protCompatibility = [V3_0_0, V3_1_0, V3_2_0, V3_3_0, V3_3_1]
+    _protCompatibility = [V3_0_0, V3_1_0, V3_2_0, V3_3_0, V3_3_1, V3_3_2]
     _className = "helix_refine"
 
     def _defineParams(self, form):
