@@ -57,7 +57,7 @@ class ProtCryoSparcHomogeneousReconstruct(ProtCryosparcBase):
     _className = "homo_reconstruct"
     _devStatus = NEW
     _fscColumns = 6
-    _protCompatibility = [V3_3_0, V3_3_1]
+    _protCompatibility = [V3_3_0, V3_3_1, V3_3_2]
     ewsParamsName = []
 
     def _initialize(self):
